Changed the commands and solution to ysoserial java compatibility issues.